--- a/project1/Views/Home/Index.cshtml
+++ b/project1/Views/Home/Index.cshtml
@@ -3,29 +3,19 @@
 @{ 
     Layout = "~/Views/Shared/_Layout1.cshtml";
 }
-<div>
-    <input type="button" class="btn btn-primary" value="Go Back" />
-</div>
+
 <div class="row">
-    <div class="col-sm-4">
-        <div class="card">
-            <div class="card-body">
-                <a href="/Employee/HomePage" class="btn btn-primary">To Employees</a>
-            </div>
-        </div>
-    </div>
-    <div class="col-sm-4">
-        <div class="card">
-            <div class="card-body">
-                <a href="/Department/" class="btn btn-primary">To Deparments</a>
-            </div>
-        </div>
-    </div>
-    <div class="col-sm-4">
-        <div class="card">
-            <div class="card-body">
-                <a href="/Shift/" class="btn btn-primary">To Shifts</a>
-            </div>
-        </div>
-    </div>
+    <br />
+    <br />
+    <br />
+    &nbsp;
+    <a href="/Employee/HomePage" class="btn btn-primary">To Employees</a>
+    <br />
+    <br />
+    <br />
+    <a href="/Department/" class="btn btn-primary">To Deparments</a>
+    <br />
+    <br />
+    <br />
+    <a href="/Shift/" class="btn btn-primary">To Shifts</a>
 </div>
